# greenflow

./: Dockerfile  README.md  docker-compose.yml  eda.ipynb  pyproject.toml
app/: load_data.py  main.py  utils.py
